kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
      - name: nodejs-container
        image: amirmedhat/jenkines-node-demo:latest
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /welcome
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /welcome
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
