kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nodejs-demo.local
    http:
      paths:
      - path: /welcome
        pathType: Prefix
        backend:
          service:
            name: nodejs-service
            port:
              number: 80
